[package]
name = "glot-run-data-decoder"
version = "0.1.0"
authors = ["Petter Rasmussen <petter@hask.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eetf = "0.4.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
